# fetris

./: .env.production  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: desktop.yml  web.yml
docs/: settings-reference.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  GameSession.ts  VersusMatch.ts  VersusSession.ts  store.ts
src/audio/: sound.ts
src/engine/: board.ts  config.ts  finesse.ts  game.ts  garbage.ts  handling.ts  input.ts  loop.ts  modes.ts  pieces.ts  randomizer.ts  scoring.ts  spin.ts  srs.ts  types.ts
src/net/: client.ts  protocol.ts  transport.ts
src/render/: effects.ts  renderer.ts  theme.ts
src/styles/: app.css
src/ui/: GameScreen.tsx  MenuScreen.tsx  SettingsScreen.tsx  VersusScreen.tsx  controls.tsx
tests/: engine.test.ts  garbage.test.ts  versus.test.ts
